crates/strider-analyze/tests/snapshots/arm_thumb__calling_convention__forward_8.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x5b8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "9" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "9" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "9" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="arg[7] ← ram[sp + 12]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="arg[6] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="arg[5] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="arg[4] ← ram[sp + 0]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "7" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "6" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "6" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "5" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "5" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "23" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "23" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "27" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "25" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "29" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "27" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "31" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "29" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "33" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "31" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "35" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "33" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "37" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v38" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v38" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "39" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="StackStore u32\n→ ram[sp - 52]", shape=box3d, fillcolor="#20182a"];
  "41" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="StackStore u32\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "43" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "41" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "45" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "43" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "47" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v48" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v48" -> "45" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "49" -> "45" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "49" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "47" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "50" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v51" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v51" -> "47" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "52" -> "47" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "52" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "50" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "53" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v54" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v54" -> "50" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "55" -> "50" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="init\nr6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "53" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "56" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "53" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "58" -> "53" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="init\nr7", shape=Mdiamond, fillcolor="#1a3a5c"];
  "56" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "59" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "56" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "61" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="init\nr8", shape=Mdiamond, fillcolor="#1a3a5c"];
  "59" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "62" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v63" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v63" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "64" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "64" [label="init\nr9", shape=Mdiamond, fillcolor="#1a3a5c"];
  "62" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "65" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "62" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "67" -> "62" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="init\nr10", shape=Mdiamond, fillcolor="#1a3a5c"];
  "65" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "68" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v69" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v69" -> "65" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "70" -> "65" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "68" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "71" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "68" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "73" -> "68" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "71" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
